--- a/src/index.css
+++ b/src/index.css
@@ -40,11 +40,13 @@ b
 	color: var(--highlight-color);
 }
 
-.document {
+.document 
+{
 	height: 100%;
 }
 
-#TitleBar{
+#TitleBar
+{
 	width: 100%;
 
 	position: relative;
@@ -71,12 +73,14 @@ b
     animation: slideIn 4s 1 0s ease-out forwards;
 }
 
-@keyframes slideIn{
+@keyframes slideIn
+{
     0%{width: 0%;}
     100%{width: 60%;}
 }
 
-#About-Section{
+#About-Section
+{
 	width: 100%;
 	height: 40vw;
 
@@ -85,7 +89,8 @@ b
 	text-align: center;
 }
 
-.particles{
+.particles
+{
 	width: 100%;
 	height: 40vw;
 
@@ -159,7 +164,8 @@ b
 	outline: 0;
 }
 
-#Links button:hover {
+#Links button:hover 
+{
 	background-color: #FFFFFF;
 
 	color: #000000;
@@ -187,12 +193,7 @@ b
 	justify-content: center;
 	opacity: 0;
   	
-  	animation-name: fadeIn;
-	animation-duration: 2s;
-	animation-timing-function: ease-out;
-	animation-iteration-count: 1;
-	animation-fill-mode: forwards;
-	animation-play-state: paused;
+  	animation: fadeIn 2s ease-out 1 forwards paused;
 }
 
 @keyframes fadeIn
@@ -232,31 +233,4 @@ b
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     word-wrap: break-word; 
-}
-
-svg
-{
-	width: 100%;
-	height: auto;
-	
-	z-index: -1;
-	position: absolute;
-}
-
-.line-box
-{
-	stroke-dasharray: 1000;
-  	animation: flow 3s 1 linear;
-}
-
-.lines
-{
-	stroke: var(--highlight-color);
-	stroke-width: 0.3vw;
-}
-
-@keyframes flow
-{
-	0% {stroke-dashoffset: 1000;}
-	100% {	stroke-dashoffset: 0;}
 }
