--- a/src/index.css
+++ b/src/index.css
@@ -155,7 +155,7 @@ b
 	font-size: 2vw;
 
 	border: none;
-	border-radius: 0.7vw; /* 20vw */
+	border-radius: 20vw;
 
 	padding: 2%;
 	margin: 0px 2%; 
