--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body
 	margin: 0px;
 	font-family: 'Open Sans', "Helvetica Neue", "Lucida Grande", sans-serif;
 	font-size: 1.2vw;
+	text-rendering: optimizeLegibility;
 }
 
 pre
