--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body
 	font-family: 'Open Sans', "Helvetica Neue", "Lucida Grande", sans-serif;
 	font-size: 1.2vw;
 	text-rendering: optimizeLegibility;
+	letter-spacing: 0.1em;
 }
 
 pre
