--- a/src/index.css
+++ b/src/index.css
@@ -307,4 +307,8 @@ b {
 
 .contentElement .media {
 	grid-area: media;
+	place-self: center;
+	height: 100%;
+	width: auto;
+	object-fit: contain;
 }
