--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@ pre {
 	font-size: 1.2vw;
 }
 
+p {
+	/* margin-top: 0; */
+}
+
 a {
 	color: var(--alt-color);
 	font-weight: bold;
@@ -154,43 +158,44 @@ b {
 
 	background-color: rgba(20, 20, 20, 0.5);
 
-	display: inline-block;
+	/* display: inline-block; */
+	display: inline-grid;
 	position: relative;
 
+	grid-template-columns: 3fr 1fr;
+	grid-template-rows: 50px auto 50px;
+	grid-template-areas: "title portrait" "about portrait" "buttons portrait";
+	gap: var(--gap-size) 3%;
+	place-items: stretch;
+	place-content: stretch;
+
+	padding: 3%;
 	margin: 4vw;
 }
 
 #About h1 {
-	width: 60%;
+	grid-area: "title";
 
-	margin-right: 0px;
-	margin-bottom: 0.6%;
+	margin: 0px;
 }
 
 #About p {
-	width: 60%;
-
-	margin-left: 5%;
-	margin-top: 0px;
+	grid-area: about;
 
 	text-align: left;
-}
-
-#About b {
-	color: var(--alt-color);
+	margin: 0;
 }
 
 #portrait {
 	width: 25%;
 
-	float: right;
-	border-radius: 100%;
+	grid-area: portrait;
 
-	margin: 5%;
+	border-radius: 100%;
 }
 
 #Links {
-	width: 60%;
+	grid-area: buttons;
 }
 
 #Links button {
@@ -202,8 +207,8 @@ b {
 	border: none;
 	border-radius: 20vw;
 
-	padding: var(--gap-size);
 	margin: 0px var(--gap-size);
+	padding: var(--gap-size);
 
 	cursor: pointer;
 	outline: 0;
@@ -307,8 +312,7 @@ b {
 
 .contentElement .media {
 	grid-area: media;
-	place-self: center;
+	place-self: stretch;
 	height: 100%;
-	width: auto;
 	object-fit: contain;
 }
