Fix layout and picture

--- a/src/index.css
+++ b/src/index.css
@@ -273,7 +273,7 @@ b {
 }
 
 .reverse.under {
-	grid-template-areas: "title media" "blerb media" "media tools";
+	grid-template-areas: "title media" "blerb media" "blerb tools";
 }
 
 .landscape {
